* Changelog

** [[https://github.com/USTC-TNS/TAT/compare/v0.3.12...dev][Unreleased]]

*** Added
+ *tetragono*: Add =__contains__= and =__len__= for hamiltonians handle of abstract state.
+ *bridge*: Add support for bridging from TNSP new format.
*** Changed
+ *TAT.py*: Use =scikit-build-core= as build backend. =MAKEFLAGS= and =CMAKEFLAGS= are droped. Use =scikit-build-core=
  environment variable =SKBUILD_CMAKE_ARGS= to pass arguments to cmake command line when building =PyTAT= wheel.
+ *tetragono*: Use Lanczos algorithm instead of previous power iteration to optimize exact state. =update= function for
  exact state does not have the second parameter =approximate_energy= any more, and =ex_update= in tetragono shell does
  not have the second parameter either.
+ *TAT.hpp*: Change the default exponential iteration step to =8= from =2=, since in practice, it is difficult for
  =step=2= to convege to a usable result.
*** Deprecated
*** Removed
*** Fixed
+ *TAT.py*: Fix a bug in loading Symmetry or Edge.
+ *bridge*: Fix several bugs in tnsp bridge, because of the TAT interface changes a lot since the first release of tnsp
  bridge.
+ *TAT.py* Fix wrong arguments number for function =__deepcopy__= of tensor.

** [[https://github.com/USTC-TNS/TAT/compare/v0.3.11...v0.3.12][v0.3.12]] - 2023-11-29

*** Added
+ *TAT.py*: =edges[int]= and =edge_by_name(str)= are the new interface for indexing edges in tensor, the previous
  interface has been deprecated.
+ *TAT.py*: Add copy constructor for =Symmetry=, =Edge= and =Tensor=.
*** Changed
+ *TAT.hpp*: The names of all inplace functions are renamed with a suffix =_=.
+ *TAT.py*: The names of all inplace functions are renamed with a suffix =_=.
*** Deprecated
+ *TAT.py*: =edges(str)= and =edges(int)= is deprecated for tensor.
*** Removed
+ *tetraux*: Package tetraux is removed, because it is useless since ansatz product state removed.